# spoodl

./: .gitignore  README.md  playlists.txt  pyproject.toml  test.txt
spoodl/: __init__.py  __main__.py  download.py  localscan.py  playlist.py  postprocess.py  search.py
